<resources>
    <string name="app_name">StyleruApp</string>
    <string name="enter">Войти</string>
    <string name="forget">Забыли?</string>
    <string name="password">Пароль</string>
    <string name="login">Логин</string>
    <string name="profile">Профиль</string>
    <string name="events">События</string>
    <string name="people">Люди</string>
    <string name="directions">Направления</string>
    <string name="e_mail">E-mail</string>
    <string name="phone">Телефон</string>
    <string name="edit">Редактировать</string>
    <string name="to_apply">Применить</string>
    <string name="to_cancel">Отменить</string>
    <string name="cancel">Отмена</string>
    <string name="save_changes">Сохранить изменения?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="online">Онлайн</string>
    <string name="meetings">Встречи</string>
    <string name="congregation">Сходки</string>
</resources>
